[package]
name = "tokio-signal"
version = "0.1.5"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/tokio-signal"
homepage = "https://github.com/alexcrichton/tokio-signal"
documentation = "https://docs.rs/tokio-signal/0.1"
description = """
An implementation of an asynchronous Unix signal handling backed futures.
"""
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "alexcrichton/tokio-signal" }
appveyor = { repository = "alexcrichton/tokio-signal" }

[dependencies]
futures = "0.1.11"
mio = {path = "../mio-nonbroken"}
tokio-core = {path = "../tokio-core"}
tokio-io = {path = "../tokio/tokio-io"}

[target.'cfg(unix)'.dependencies]
libc = "0.2"
mio-uds = "0.6"

[target.'cfg(windows)'.dependencies.winapi]
path = "../winapi-rs"
features = ["minwindef", "wincon"]
